projects/api-gateway/k8s/dev.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-gateway
  labels:
    name: api-gateway
spec:
  containers:
    - name: api-gateway
      image: api-gateway:local
      imagePullPolicy: Never
      volumeMounts:
        - name: api-gateway-src
          mountPath: /projects/api-gateway/src
        - name: shared-src
          mountPath: /projects/shared/src
      ports:
        - containerPort: 8080
  volumes:
    - name: api-gateway-src
      hostPath:
        path: /projects/api-gateway/src
    - name: shared-src
      hostPath:
        path: /projects/shared/src
