projects/api-gateway/k8s/prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      name: api-gateway
  template:
    metadata:
      labels:
        name: api-gateway
    spec:
      containers:
        - name: app
          image: api-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
