projects/api-gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    name: api-gateway
spec:
  ports:
    - name: api-gateway
      port: 8080
      targetPort: 8080
  clusterIP: None
  selector:
    name: api-gateway
