projects/api-gateway/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api-gateway
      http:
        paths:
          - backend:
              serviceName: api-gateway
              servicePort: 8080
            path: /
